--- a/src/main/resources/templates/admin/ttheme/adminthememng.html
+++ b/src/main/resources/templates/admin/ttheme/adminthememng.html
@@ -109,7 +109,8 @@
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-bell"></span>   通知管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-person-rolodex"></span>   反馈管理</button>
