--- a/src/main/resources/templates/admin/uuser/adminusermng.html
+++ b/src/main/resources/templates/admin/uuser/adminusermng.html
@@ -87,8 +87,9 @@
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='http://localhost:8080/adm/allusersdefault'">
                     <span class="bi-person-video2"></span>   用户管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-back"></span>   模块管理</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/allthemes'">
+                    <span class="bi-back"></span>   主题管理</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-card-text"></span>   帖子管理</button>
                 <button type="button" class="list-group-item list-group-item-action"
@@ -126,7 +127,7 @@
                 <div class="col-sm-6">
                     <form class="d-flex" style="position: center">
                         <input class="form-control me-2" type="search" placeholder="搜索用户" aria-label="Search">
-                        <button class="btn btn-outline-success" type="button">
+                        <button class="btn btn-success" type="button">
                             <span class="bi-search"></span></button>
                     </form>
                 </div>
