--- a/src/main/resources/templates/user/userinfopage.html
+++ b/src/main/resources/templates/user/userinfopage.html
@@ -118,7 +118,7 @@
 
     <div class="row">
         <div class="col-3">
-            <h3><span class="bi-person-circle"></span> 我的</h3>
+            <h3>我的</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tousercenter'">
@@ -130,7 +130,7 @@
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-star"></span> 我的收藏</button>
             </div>
-            <h3><span class="bi-safe"></span> 安全</h3>
+            <h3>安全</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='/user/userinfo'">
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col-9">
-            <h1><span class="bi-person"></span> 个人信息</h1>
+            <h1><span class="bi-clipboard-data"></span> 我的信息</h1>
             <form>
                 <fieldset disabled>
                     <div class="row mb-3">
