--- a/src/main/resources/templates/user/usermng.html
+++ b/src/main/resources/templates/user/usermng.html
@@ -121,7 +121,7 @@
 
     <div class="row">
         <div class="col-3">
-            <h3><span class="bi-person-circle"></span> 我的</h3>
+            <h3>我的</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='/user/tousercenter'">
@@ -133,7 +133,7 @@
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-star"></span> 我的收藏</button>
             </div>
-            <h3><span class="bi-safe"></span> 安全</h3>
+            <h3>安全</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/userinfo'">
@@ -147,6 +147,7 @@
             </div>
         </div>
         <div class="col-9">
+            <h1><span class="bi-journal-check"></span> 我的数据</h1>
             <div class="row">
                 <div class="col-sm-4">
                     <h5 th:text="'文章总数：' + ${articlenum}"></h5>
