--- a/src/main/resources/templates/admin/uuser/adminusermng2.html
+++ b/src/main/resources/templates/admin/uuser/adminusermng2.html
@@ -87,8 +87,9 @@
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='http://localhost:8080/adm/allusersdefault'">
                     <span class="bi-person-video2"></span>   用户管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-back"></span>   模块管理</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/allthemes'">
+                    <span class="bi-back"></span>  主题管理</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-card-text"></span>   帖子管理</button>
                 <button type="button" class="list-group-item list-group-item-action"
