--- a/src/main/resources/templates/user/userchangeemailpage.html
+++ b/src/main/resources/templates/user/userchangeemailpage.html
@@ -118,9 +118,9 @@
 
     <div class="row">
         <div class="col-3">
-            <h3><span class="bi-person-circle"></span> 我的</h3>
+            <h3>我的</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
+                <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tousercenter'">
                     <span class="bi-journal-check"></span> 我的数据</button>
                 <button type="button" class="list-group-item list-group-item-action">
@@ -130,7 +130,7 @@
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-star"></span> 我的收藏</button>
             </div>
-            <h3><span class="bi-safe"></span> 安全</h3>
+            <h3>安全</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/userinfo'">
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col-9">
-            <h1><span class="bi-envelope"></span> 修改邮箱地址</h1>
+            <h1><span class="bi-at"></span> 修改邮箱</h1>
             <div id="loginform" class="col-sm">
                 <form>
                     <div class="mb-3">
